# SudokuSolver

./: .gitignore  CMakeLists.txt  Commandes exportées(2).voicecontrolcommands  SudokuSolverWeb.py  Untitled.xcf  encode.txt  entry.py  entryv2.py  main.cpp  mainwindow.ui  monfichier.b64  monfichier.txt  notes  test.voicecontrolcommands  test.xcf  testClick.py  testVoiceControl.py  voicecontrol.py  voix.py
UI/SolverUI/: SolverUI.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
extension/: background.js  content_script.js  manifest.json  solve.html  solve.js
include/: SudokuSolver.hpp
src/: CMakeLists.txt  Case.cpp  Col.cpp  Group.cpp  Row.cpp  Segment.cpp  SegmentHorizontal.cpp  SegmentVertical.cpp  Square.cpp  Sudoku.cpp  functions.cpp
sudoku_scan_ui/: package-lock.json  package.json
sudoku_scan_ui/src/: App.css  Scanner.js  index.js
templates/: video_feed.html
